# phishing-email-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
samples/: sample_phish.eml
src/phishing_analyzer/: __init__.py  __main__.py  analyzer.py  enrichment.py  indicators.py  report.py
tests/: test_analyzer.py  test_enrichment.py
